# wa-ecorehab-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: aoi_mining_proxy.yaml  aoi_swan_coastal_plain.yaml  aoi_wheatbelt.yaml  ci_smoke.yaml  inference.yaml  random_forest.yaml  report.yaml  segformer.yaml  unet.yaml  xgboost.yaml
docs/: data_sources.md  gcp_batch_inference_design.md  label_strategy.md  limitations.md  model_card.md  references.md  reproducibility.md  spatial_validation.md
scripts/: make_example_figures.py
src/ecorehab/: __init__.py  artifacts.py  cli.py  constants.py  pipeline.py
src/ecorehab/data/: __init__.py  build_composites.py  demo.py  download_vectors.py  make_demo.py  masks.py  stac.py
src/ecorehab/evaluation/: __init__.py  area_estimation.py  calibration.py  metrics.py  spatial_cv.py  uncertainty.py
src/ecorehab/features/: __init__.py  indices.py  texture.py
src/ecorehab/inference/: __init__.py  batch_predict.py  polygonize.py  stitch.py  tile_inference.py
src/ecorehab/labels/: __init__.py  build_labels.py  build_tiles.py  rasterize.py  sampling.py  tiling.py  weak_labels.py
src/ecorehab/models/: __init__.py  classical.py  losses.py  segformer.py  unet.py
src/ecorehab/reporting/: __init__.py  build_site_report.py  figures.py  maps.py
src/ecorehab/training/: __init__.py  augmentations.py  dataset.py  train_classical.py  train_segmentation.py
src/ecorehab/utils/: __init__.py  config.py  crs.py  io.py  logging.py
tests/: conftest.py  test_area.py  test_config.py  test_crs.py  test_features.py  test_inference_shapes.py  test_metrics.py  test_rasterization.py  test_tiling.py
